welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:9: error: value lenght is not a member of Array[java.awt.Color]
	for(c2 <- 0 to T.lenght - 2) {
                         ^